--- a/node/simple_webpack/package.json
+++ b/node/simple_webpack/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-build": "rm -rf dist/* && cp index.html ./dist/ && set NODE_ENV=development && webpack",
-    "build": "rm -rf dist/* && cp index.html ./dist/ && set NODE_ENV=production && webpack"
+    "test-build": "rm -rf dist/* && cp index.html ./dist/ && cross-env NODE_ENV=development && webpack",
+    "build": "rm -rf dist/* && cp index.html ./dist/ && cross-env NODE_ENV=production && webpack"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.20.1",
